Version 0.9.6 (2009/01/07)

  * cvblob.cpp:
    + Various: fixed some warnings and indentation.
    + cvRenderBlobs: new features. Now print blob information to log and standard
    out.

  * cvblob.h: cvRenderBlobs new features.

Version 0.9.5 (2009/01/04)

  * cvlabel.cpp, cvblob.cpp: fixed bug that appears when images has an odd
  number of columns. "widhtStep", "depth" and "nChannels" are used now. Thanks
  again to Stefan Gachter for give me the solution.

Version 0.9.4 (2008/12/18)

  * cvblob.cpp:
    + cvCentralMoments: checks if central moments was been calculate before.
    + cvRenderBlobs: new function to render blobs.
    + cvAngle: check if central moments have been caclulated.

  * cvlabel.cpp: initialize "centralMoments".

  * cvblob.h:
    + IPL_DEPTH_LABEL: now is calculated.
    + CvBlob: new member: "centralMoments".
    + cvCentralMoments: image is keeping constant.
    + cvRenderBlobs: head and "defines".

  * test.cpp: now uses the new function "cvRenderBlobs".

Version 0.9.3 (2008/12/17)

  * cvlabel.cpp: rewritten changes of version 0.9.1.

Version 0.9.2 (2008/12/15)

  * README: updated instructions for instalation of dependencies.

  * CMakeList: new version and line required by CMake 2.6.

Version 0.9.1 (2008/12/12)

  * Fixed labeling: works with all the pixels of the binary image (even
  borders) and with any number of colunms. Also, the format was fixed. Thanks
  to Stefan Gachter.

  * Function "merge": it didn't return anything. Thanks to yostane.

  * README: updated.

Version 0.9.0 (2008/09/29)

  * Test: implemented.

  * README: redacted first version.